# Proyecto3-GraficaPorComputadoras

./: .gitignore  CMakeLists.txt  README.md
src/: cube.cpp  cube.h  imageloader.h  intersect.h  light.h  main.cpp  material.h  skybox.h  sphere.cpp
